correzione della convenzione di denominazione delle variabili per coerenza nel progetto e gestione delle eccezioni con BusinessException